# avcpp

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Demuxer.cpp  Demuxer.h
tests/: CMakeLists.txt  avformat_test.cpp
